# Gradle_vs_Bazel

./: .bazelignore  .dockerignore  .gitignore  Dockerfile  MODULE.bazel  README.md  generate_feature_modules.py  gradle.properties  settings.gradle.kts
app/: BUILD.bazel  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
bazel_benchmark_scenarios/: benchmark.scenario
core/model/: BUILD.bazel  build.gradle.kts
core/network/: BUILD.bazel  build.gradle.kts
core/ui/: BUILD.bazel  build.gradle.kts
core/ui/src/main/java/com/romix/core/ui/: UiPlaceholders.kt
docker/: build-android.sh  clone-and-build.sh
feature/feat1/: BUILD.bazel  build.gradle.kts
feature/feat10/: BUILD.bazel  build.gradle.kts
feature/feat100/: BUILD.bazel  build.gradle.kts
feature/feat101/: BUILD.bazel  build.gradle.kts
feature/feat102/: BUILD.bazel  build.gradle.kts
feature/feat103/: BUILD.bazel  build.gradle.kts
feature/feat104/: BUILD.bazel  build.gradle.kts
feature/feat105/: BUILD.bazel  build.gradle.kts
feature/feat106/: BUILD.bazel  build.gradle.kts
feature/feat107/: BUILD.bazel  build.gradle.kts
feature/feat108/: BUILD.bazel  build.gradle.kts
feature/feat109/: BUILD.bazel  build.gradle.kts
feature/feat11/: BUILD.bazel  build.gradle.kts
feature/feat110/: BUILD.bazel  build.gradle.kts
feature/feat111/: BUILD.bazel  build.gradle.kts
feature/feat112/: BUILD.bazel  build.gradle.kts
feature/feat113/: BUILD.bazel  build.gradle.kts
feature/feat114/: BUILD.bazel  build.gradle.kts
feature/feat115/: BUILD.bazel  build.gradle.kts
feature/feat116/: BUILD.bazel  build.gradle.kts
feature/feat117/: BUILD.bazel  build.gradle.kts
feature/feat118/: BUILD.bazel  build.gradle.kts
feature/feat119/: BUILD.bazel  build.gradle.kts
feature/feat12/: BUILD.bazel  build.gradle.kts
feature/feat120/: BUILD.bazel  build.gradle.kts
feature/feat121/: BUILD.bazel  build.gradle.kts
feature/feat122/: BUILD.bazel  build.gradle.kts
feature/feat123/: BUILD.bazel  build.gradle.kts
feature/feat124/: BUILD.bazel  build.gradle.kts
feature/feat125/: BUILD.bazel  build.gradle.kts
feature/feat126/: BUILD.bazel  build.gradle.kts
feature/feat127/: BUILD.bazel  build.gradle.kts
feature/feat128/: BUILD.bazel  build.gradle.kts
feature/feat129/: BUILD.bazel  build.gradle.kts
feature/feat13/: BUILD.bazel  build.gradle.kts
feature/feat130/: BUILD.bazel  build.gradle.kts
feature/feat131/: BUILD.bazel  build.gradle.kts
feature/feat132/: BUILD.bazel  build.gradle.kts
feature/feat133/: BUILD.bazel  build.gradle.kts
feature/feat134/: BUILD.bazel  build.gradle.kts
feature/feat135/: BUILD.bazel  build.gradle.kts
feature/feat136/: BUILD.bazel  build.gradle.kts
feature/feat137/: BUILD.bazel  build.gradle.kts
feature/feat138/: BUILD.bazel  build.gradle.kts
feature/feat139/: BUILD.bazel  build.gradle.kts
feature/feat14/: BUILD.bazel  build.gradle.kts
feature/feat140/: BUILD.bazel  build.gradle.kts
feature/feat141/: BUILD.bazel  build.gradle.kts
feature/feat142/: BUILD.bazel  build.gradle.kts
feature/feat143/: BUILD.bazel  build.gradle.kts
feature/feat144/: BUILD.bazel  build.gradle.kts
feature/feat145/: BUILD.bazel  build.gradle.kts
feature/feat146/: BUILD.bazel  build.gradle.kts
feature/feat147/: BUILD.bazel  build.gradle.kts
feature/feat148/: BUILD.bazel  build.gradle.kts
feature/feat149/: BUILD.bazel  build.gradle.kts
feature/feat15/: BUILD.bazel  build.gradle.kts
feature/feat150/: BUILD.bazel  build.gradle.kts
feature/feat151/: BUILD.bazel  build.gradle.kts
feature/feat152/: BUILD.bazel  build.gradle.kts
feature/feat153/: BUILD.bazel  build.gradle.kts
feature/feat154/: BUILD.bazel  build.gradle.kts
feature/feat155/: BUILD.bazel  build.gradle.kts
feature/feat156/: BUILD.bazel  build.gradle.kts
feature/feat157/: BUILD.bazel  build.gradle.kts
feature/feat158/: BUILD.bazel  build.gradle.kts
feature/feat159/: BUILD.bazel  build.gradle.kts
feature/feat16/: BUILD.bazel  build.gradle.kts
feature/feat160/: BUILD.bazel  build.gradle.kts
feature/feat161/: BUILD.bazel  build.gradle.kts
feature/feat162/: BUILD.bazel  build.gradle.kts
feature/feat163/: BUILD.bazel  build.gradle.kts
feature/feat164/: BUILD.bazel  build.gradle.kts
feature/feat165/: BUILD.bazel  build.gradle.kts
feature/feat166/: BUILD.bazel  build.gradle.kts
feature/feat167/: BUILD.bazel  build.gradle.kts
feature/feat168/: BUILD.bazel  build.gradle.kts
feature/feat169/: BUILD.bazel  build.gradle.kts
feature/feat17/: BUILD.bazel  build.gradle.kts
feature/feat170/: BUILD.bazel  build.gradle.kts
feature/feat171/: BUILD.bazel  build.gradle.kts
feature/feat172/: BUILD.bazel  build.gradle.kts
feature/feat173/: BUILD.bazel  build.gradle.kts
feature/feat174/: BUILD.bazel  build.gradle.kts
feature/feat175/: BUILD.bazel  build.gradle.kts
feature/feat176/: BUILD.bazel  build.gradle.kts
feature/feat177/: BUILD.bazel  build.gradle.kts
feature/feat178/: BUILD.bazel  build.gradle.kts
feature/feat179/: BUILD.bazel  build.gradle.kts
feature/feat18/: BUILD.bazel  build.gradle.kts
feature/feat180/: BUILD.bazel  build.gradle.kts
feature/feat181/: BUILD.bazel  build.gradle.kts
feature/feat658/: BUILD.bazel  build.gradle.kts
feature/feat658/src/main/java/com/romix/feature/feat658/: Feat658.kt
gradle/: libs.versions.toml
gradle_benchmark_scenarios/: benchmark.scenario  feature_module_non_abi_change.scenario
profile-bazel-100-modules/: benchmark.csv  benchmark.html
profile-bazel-400-modules/: benchmark.csv  benchmark.html
profile-bazel-50-modules/: benchmark.csv  benchmark.html
profile-bazel-700-modules/: benchmark.csv  benchmark.html
profile-gradle-100-modules/: benchmark.csv  benchmark.html
profile-gradle-400-modules/: benchmark.csv  benchmark.html
profile-gradle-50-modules/: benchmark.csv  benchmark.html
profile-gradle-700-modules/: benchmark.csv  benchmark.html
(+1916 files in other folders)
