###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "app",
)

bazel_dep(name = "rules_kotlin", version = "2.1.9")
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.activity:activity-ktx:1.9.0",
        "androidx.core:core-ktx:1.17.0",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.9.3",
        "androidx.profileinstaller:profileinstaller:1.3.1",
        "androidx.concurrent:concurrent-futures:1.1.0",
        "com.google.guava:guava:32.1.2-android",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

