load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    deps = [
        "//core/model:core_lib_model",
        "//core/network:core_lib_network",
        "//core/ui:core_lib_ui",

        "//feature/feat1:feature_lib_1",
        "//feature/feat2:feature_lib_2",
        "//feature/feat3:feature_lib_3",
        "//feature/feat4:feature_lib_4",
        "//feature/feat5:feature_lib_5",
        "//feature/feat6:feature_lib_6",
        "//feature/feat7:feature_lib_7",
        "//feature/feat8:feature_lib_8",
        "//feature/feat9:feature_lib_9",
        "//feature/feat10:feature_lib_10",
        "//feature/feat11:feature_lib_11",
        "//feature/feat12:feature_lib_12",
        "//feature/feat13:feature_lib_13",
        "//feature/feat14:feature_lib_14",
        "//feature/feat15:feature_lib_15",
        "//feature/feat16:feature_lib_16",
        "//feature/feat17:feature_lib_17",
        "//feature/feat18:feature_lib_18",
        "//feature/feat19:feature_lib_19",
        "//feature/feat20:feature_lib_20",
        "//feature/feat21:feature_lib_21",
        "//feature/feat22:feature_lib_22",
        "//feature/feat23:feature_lib_23",
        "//feature/feat24:feature_lib_24",
        "//feature/feat25:feature_lib_25",
        "//feature/feat26:feature_lib_26",
        "//feature/feat27:feature_lib_27",
        "//feature/feat28:feature_lib_28",
        "//feature/feat29:feature_lib_29",
        "//feature/feat30:feature_lib_30",
        "//feature/feat31:feature_lib_31",
        "//feature/feat32:feature_lib_32",
        "//feature/feat33:feature_lib_33",
        "//feature/feat34:feature_lib_34",
        "//feature/feat35:feature_lib_35",
        "//feature/feat36:feature_lib_36",
        "//feature/feat37:feature_lib_37",
        "//feature/feat38:feature_lib_38",
        "//feature/feat39:feature_lib_39",
        "//feature/feat40:feature_lib_40",
        "//feature/feat41:feature_lib_41",
        "//feature/feat42:feature_lib_42",
        "//feature/feat43:feature_lib_43",
        "//feature/feat44:feature_lib_44",
        "//feature/feat45:feature_lib_45",
        "//feature/feat46:feature_lib_46",
        "//feature/feat47:feature_lib_47",
        "//feature/feat48:feature_lib_48",
        "//feature/feat49:feature_lib_49",
        "//feature/feat50:feature_lib_50",
        "//feature/feat51:feature_lib_51",
        "//feature/feat52:feature_lib_52",
        "//feature/feat53:feature_lib_53",
        "//feature/feat54:feature_lib_54",
        "//feature/feat55:feature_lib_55",
        "//feature/feat56:feature_lib_56",
        "//feature/feat57:feature_lib_57",
        "//feature/feat58:feature_lib_58",
        "//feature/feat59:feature_lib_59",
        "//feature/feat60:feature_lib_60",
        "//feature/feat61:feature_lib_61",
        "//feature/feat62:feature_lib_62",
        "//feature/feat63:feature_lib_63",
        "//feature/feat64:feature_lib_64",
        "//feature/feat65:feature_lib_65",
        "//feature/feat66:feature_lib_66",
        "//feature/feat67:feature_lib_67",
        "//feature/feat68:feature_lib_68",
        "//feature/feat69:feature_lib_69",
        "//feature/feat70:feature_lib_70",
        "//feature/feat71:feature_lib_71",
        "//feature/feat72:feature_lib_72",
        "//feature/feat73:feature_lib_73",
        "//feature/feat74:feature_lib_74",
        "//feature/feat75:feature_lib_75",
        "//feature/feat76:feature_lib_76",
        "//feature/feat77:feature_lib_77",
        "//feature/feat78:feature_lib_78",
        "//feature/feat79:feature_lib_79",
        "//feature/feat80:feature_lib_80",
        "//feature/feat81:feature_lib_81",
        "//feature/feat82:feature_lib_82",
        "//feature/feat83:feature_lib_83",
        "//feature/feat84:feature_lib_84",
        "//feature/feat85:feature_lib_85",
        "//feature/feat86:feature_lib_86",
        "//feature/feat87:feature_lib_87",
        "//feature/feat88:feature_lib_88",
        "//feature/feat89:feature_lib_89",
        "//feature/feat90:feature_lib_90",
        "//feature/feat91:feature_lib_91",
        "//feature/feat92:feature_lib_92",
        "//feature/feat93:feature_lib_93",
        "//feature/feat94:feature_lib_94",
        "//feature/feat95:feature_lib_95",
        "//feature/feat96:feature_lib_96",
        "//feature/feat97:feature_lib_97",
        "//feature/feat98:feature_lib_98",
        "//feature/feat99:feature_lib_99",
        "//feature/feat100:feature_lib_100",

        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_concurrent_concurrent_futures",
        "@maven//:com_google_guava_listenablefuture",
        "@maven//:com_google_guava_guava",
    ],
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    deps = [
        ":app_lib",
    ],
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    manifest_values = {
        "minSdkVersion": "26",
        "targetSdkVersion": "34",
        "applicationId": "com.romix.build.systems"
    }
)
