load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

kt_android_library(
    name = "app_lib",
    srcs = glob(["src/main/java/**/*.kt"]),
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    deps = [
        "//core/model:core_lib_model",
        "//core/network:core_lib_network",
        "//core/ui:core_lib_ui",

        "//feature/feat1:feature_lib_1",
        "//feature/feat2:feature_lib_2",
        "//feature/feat3:feature_lib_3",
        "//feature/feat4:feature_lib_4",
        "//feature/feat5:feature_lib_5",
        "//feature/feat6:feature_lib_6",
        "//feature/feat7:feature_lib_7",
        "//feature/feat8:feature_lib_8",
        "//feature/feat9:feature_lib_9",
        "//feature/feat10:feature_lib_10",
        "//feature/feat11:feature_lib_11",
        "//feature/feat12:feature_lib_12",
        "//feature/feat13:feature_lib_13",
        "//feature/feat14:feature_lib_14",
        "//feature/feat15:feature_lib_15",
        "//feature/feat16:feature_lib_16",
        "//feature/feat17:feature_lib_17",
        "//feature/feat18:feature_lib_18",
        "//feature/feat19:feature_lib_19",
        "//feature/feat20:feature_lib_20",
        "//feature/feat21:feature_lib_21",
        "//feature/feat22:feature_lib_22",
        "//feature/feat23:feature_lib_23",
        "//feature/feat24:feature_lib_24",
        "//feature/feat25:feature_lib_25",
        "//feature/feat26:feature_lib_26",
        "//feature/feat27:feature_lib_27",
        "//feature/feat28:feature_lib_28",
        "//feature/feat29:feature_lib_29",
        "//feature/feat30:feature_lib_30",
        "//feature/feat31:feature_lib_31",
        "//feature/feat32:feature_lib_32",
        "//feature/feat33:feature_lib_33",
        "//feature/feat34:feature_lib_34",
        "//feature/feat35:feature_lib_35",
        "//feature/feat36:feature_lib_36",
        "//feature/feat37:feature_lib_37",
        "//feature/feat38:feature_lib_38",
        "//feature/feat39:feature_lib_39",
        "//feature/feat40:feature_lib_40",
        "//feature/feat41:feature_lib_41",
        "//feature/feat42:feature_lib_42",
        "//feature/feat43:feature_lib_43",
        "//feature/feat44:feature_lib_44",
        "//feature/feat45:feature_lib_45",
        "//feature/feat46:feature_lib_46",
        "//feature/feat47:feature_lib_47",
        "//feature/feat48:feature_lib_48",
        "//feature/feat49:feature_lib_49",
        "//feature/feat50:feature_lib_50",
        "//feature/feat51:feature_lib_51",
        "//feature/feat52:feature_lib_52",
        "//feature/feat53:feature_lib_53",
        "//feature/feat54:feature_lib_54",
        "//feature/feat55:feature_lib_55",
        "//feature/feat56:feature_lib_56",
        "//feature/feat57:feature_lib_57",
        "//feature/feat58:feature_lib_58",
        "//feature/feat59:feature_lib_59",
        "//feature/feat60:feature_lib_60",
        "//feature/feat61:feature_lib_61",
        "//feature/feat62:feature_lib_62",
        "//feature/feat63:feature_lib_63",
        "//feature/feat64:feature_lib_64",
        "//feature/feat65:feature_lib_65",
        "//feature/feat66:feature_lib_66",
        "//feature/feat67:feature_lib_67",
        "//feature/feat68:feature_lib_68",
        "//feature/feat69:feature_lib_69",
        "//feature/feat70:feature_lib_70",
        "//feature/feat71:feature_lib_71",
        "//feature/feat72:feature_lib_72",
        "//feature/feat73:feature_lib_73",
        "//feature/feat74:feature_lib_74",
        "//feature/feat75:feature_lib_75",
        "//feature/feat76:feature_lib_76",
        "//feature/feat77:feature_lib_77",
        "//feature/feat78:feature_lib_78",
        "//feature/feat79:feature_lib_79",
        "//feature/feat80:feature_lib_80",
        "//feature/feat81:feature_lib_81",
        "//feature/feat82:feature_lib_82",
        "//feature/feat83:feature_lib_83",
        "//feature/feat84:feature_lib_84",
        "//feature/feat85:feature_lib_85",
        "//feature/feat86:feature_lib_86",
        "//feature/feat87:feature_lib_87",
        "//feature/feat88:feature_lib_88",
        "//feature/feat89:feature_lib_89",
        "//feature/feat90:feature_lib_90",
        "//feature/feat91:feature_lib_91",
        "//feature/feat92:feature_lib_92",
        "//feature/feat93:feature_lib_93",
        "//feature/feat94:feature_lib_94",
        "//feature/feat95:feature_lib_95",
        "//feature/feat96:feature_lib_96",
        "//feature/feat97:feature_lib_97",
        "//feature/feat98:feature_lib_98",
        "//feature/feat99:feature_lib_99",
        "//feature/feat100:feature_lib_100",
        "//feature/feat101:feature_lib_101",
        "//feature/feat102:feature_lib_102",
        "//feature/feat103:feature_lib_103",
        "//feature/feat104:feature_lib_104",
        "//feature/feat105:feature_lib_105",
        "//feature/feat106:feature_lib_106",
        "//feature/feat107:feature_lib_107",
        "//feature/feat108:feature_lib_108",
        "//feature/feat109:feature_lib_109",
        "//feature/feat110:feature_lib_110",
        "//feature/feat111:feature_lib_111",
        "//feature/feat112:feature_lib_112",
        "//feature/feat113:feature_lib_113",
        "//feature/feat114:feature_lib_114",
        "//feature/feat115:feature_lib_115",
        "//feature/feat116:feature_lib_116",
        "//feature/feat117:feature_lib_117",
        "//feature/feat118:feature_lib_118",
        "//feature/feat119:feature_lib_119",
        "//feature/feat120:feature_lib_120",
        "//feature/feat121:feature_lib_121",
        "//feature/feat122:feature_lib_122",
        "//feature/feat123:feature_lib_123",
        "//feature/feat124:feature_lib_124",
        "//feature/feat125:feature_lib_125",
        "//feature/feat126:feature_lib_126",
        "//feature/feat127:feature_lib_127",
        "//feature/feat128:feature_lib_128",
        "//feature/feat129:feature_lib_129",
        "//feature/feat130:feature_lib_130",
        "//feature/feat131:feature_lib_131",
        "//feature/feat132:feature_lib_132",
        "//feature/feat133:feature_lib_133",
        "//feature/feat134:feature_lib_134",
        "//feature/feat135:feature_lib_135",
        "//feature/feat136:feature_lib_136",
        "//feature/feat137:feature_lib_137",
        "//feature/feat138:feature_lib_138",
        "//feature/feat139:feature_lib_139",
        "//feature/feat140:feature_lib_140",
        "//feature/feat141:feature_lib_141",
        "//feature/feat142:feature_lib_142",
        "//feature/feat143:feature_lib_143",
        "//feature/feat144:feature_lib_144",
        "//feature/feat145:feature_lib_145",
        "//feature/feat146:feature_lib_146",
        "//feature/feat147:feature_lib_147",
        "//feature/feat148:feature_lib_148",
        "//feature/feat149:feature_lib_149",
        "//feature/feat150:feature_lib_150",
        "//feature/feat151:feature_lib_151",
        "//feature/feat152:feature_lib_152",
        "//feature/feat153:feature_lib_153",
        "//feature/feat154:feature_lib_154",
        "//feature/feat155:feature_lib_155",
        "//feature/feat156:feature_lib_156",
        "//feature/feat157:feature_lib_157",
        "//feature/feat158:feature_lib_158",
        "//feature/feat159:feature_lib_159",
        "//feature/feat160:feature_lib_160",
        "//feature/feat161:feature_lib_161",
        "//feature/feat162:feature_lib_162",
        "//feature/feat163:feature_lib_163",
        "//feature/feat164:feature_lib_164",
        "//feature/feat165:feature_lib_165",
        "//feature/feat166:feature_lib_166",
        "//feature/feat167:feature_lib_167",
        "//feature/feat168:feature_lib_168",
        "//feature/feat169:feature_lib_169",
        "//feature/feat170:feature_lib_170",
        "//feature/feat171:feature_lib_171",
        "//feature/feat172:feature_lib_172",
        "//feature/feat173:feature_lib_173",
        "//feature/feat174:feature_lib_174",
        "//feature/feat175:feature_lib_175",
        "//feature/feat176:feature_lib_176",
        "//feature/feat177:feature_lib_177",
        "//feature/feat178:feature_lib_178",
        "//feature/feat179:feature_lib_179",
        "//feature/feat180:feature_lib_180",
        "//feature/feat181:feature_lib_181",
        "//feature/feat182:feature_lib_182",
        "//feature/feat183:feature_lib_183",
        "//feature/feat184:feature_lib_184",
        "//feature/feat185:feature_lib_185",
        "//feature/feat186:feature_lib_186",
        "//feature/feat187:feature_lib_187",
        "//feature/feat188:feature_lib_188",
        "//feature/feat189:feature_lib_189",
        "//feature/feat190:feature_lib_190",
        "//feature/feat191:feature_lib_191",
        "//feature/feat192:feature_lib_192",
        "//feature/feat193:feature_lib_193",
        "//feature/feat194:feature_lib_194",
        "//feature/feat195:feature_lib_195",
        "//feature/feat196:feature_lib_196",
        "//feature/feat197:feature_lib_197",
        "//feature/feat198:feature_lib_198",
        "//feature/feat199:feature_lib_199",
        "//feature/feat200:feature_lib_200",
        "//feature/feat201:feature_lib_201",
        "//feature/feat202:feature_lib_202",
        "//feature/feat203:feature_lib_203",
        "//feature/feat204:feature_lib_204",
        "//feature/feat205:feature_lib_205",
        "//feature/feat206:feature_lib_206",
        "//feature/feat207:feature_lib_207",
        "//feature/feat208:feature_lib_208",
        "//feature/feat209:feature_lib_209",
        "//feature/feat210:feature_lib_210",
        "//feature/feat211:feature_lib_211",
        "//feature/feat212:feature_lib_212",
        "//feature/feat213:feature_lib_213",
        "//feature/feat214:feature_lib_214",
        "//feature/feat215:feature_lib_215",
        "//feature/feat216:feature_lib_216",
        "//feature/feat217:feature_lib_217",
        "//feature/feat218:feature_lib_218",
        "//feature/feat219:feature_lib_219",
        "//feature/feat220:feature_lib_220",
        "//feature/feat221:feature_lib_221",
        "//feature/feat222:feature_lib_222",
        "//feature/feat223:feature_lib_223",
        "//feature/feat224:feature_lib_224",
        "//feature/feat225:feature_lib_225",
        "//feature/feat226:feature_lib_226",
        "//feature/feat227:feature_lib_227",
        "//feature/feat228:feature_lib_228",
        "//feature/feat229:feature_lib_229",
        "//feature/feat230:feature_lib_230",
        "//feature/feat231:feature_lib_231",
        "//feature/feat232:feature_lib_232",
        "//feature/feat233:feature_lib_233",
        "//feature/feat234:feature_lib_234",
        "//feature/feat235:feature_lib_235",
        "//feature/feat236:feature_lib_236",
        "//feature/feat237:feature_lib_237",
        "//feature/feat238:feature_lib_238",
        "//feature/feat239:feature_lib_239",
        "//feature/feat240:feature_lib_240",
        "//feature/feat241:feature_lib_241",
        "//feature/feat242:feature_lib_242",
        "//feature/feat243:feature_lib_243",
        "//feature/feat244:feature_lib_244",
        "//feature/feat245:feature_lib_245",
        "//feature/feat246:feature_lib_246",
        "//feature/feat247:feature_lib_247",
        "//feature/feat248:feature_lib_248",
        "//feature/feat249:feature_lib_249",
        "//feature/feat250:feature_lib_250",
        "//feature/feat251:feature_lib_251",
        "//feature/feat252:feature_lib_252",
        "//feature/feat253:feature_lib_253",
        "//feature/feat254:feature_lib_254",
        "//feature/feat255:feature_lib_255",
        "//feature/feat256:feature_lib_256",
        "//feature/feat257:feature_lib_257",
        "//feature/feat258:feature_lib_258",
        "//feature/feat259:feature_lib_259",
        "//feature/feat260:feature_lib_260",
        "//feature/feat261:feature_lib_261",
        "//feature/feat262:feature_lib_262",
        "//feature/feat263:feature_lib_263",
        "//feature/feat264:feature_lib_264",
        "//feature/feat265:feature_lib_265",
        "//feature/feat266:feature_lib_266",
        "//feature/feat267:feature_lib_267",
        "//feature/feat268:feature_lib_268",
        "//feature/feat269:feature_lib_269",
        "//feature/feat270:feature_lib_270",
        "//feature/feat271:feature_lib_271",
        "//feature/feat272:feature_lib_272",
        "//feature/feat273:feature_lib_273",
        "//feature/feat274:feature_lib_274",
        "//feature/feat275:feature_lib_275",
        "//feature/feat276:feature_lib_276",
        "//feature/feat277:feature_lib_277",
        "//feature/feat278:feature_lib_278",
        "//feature/feat279:feature_lib_279",
        "//feature/feat280:feature_lib_280",
        "//feature/feat281:feature_lib_281",
        "//feature/feat282:feature_lib_282",
        "//feature/feat283:feature_lib_283",
        "//feature/feat284:feature_lib_284",
        "//feature/feat285:feature_lib_285",
        "//feature/feat286:feature_lib_286",
        "//feature/feat287:feature_lib_287",
        "//feature/feat288:feature_lib_288",
        "//feature/feat289:feature_lib_289",
        "//feature/feat290:feature_lib_290",
        "//feature/feat291:feature_lib_291",
        "//feature/feat292:feature_lib_292",
        "//feature/feat293:feature_lib_293",
        "//feature/feat294:feature_lib_294",
        "//feature/feat295:feature_lib_295",
        "//feature/feat296:feature_lib_296",
        "//feature/feat297:feature_lib_297",
        "//feature/feat298:feature_lib_298",
        "//feature/feat299:feature_lib_299",
        "//feature/feat300:feature_lib_300",
        "//feature/feat301:feature_lib_301",
        "//feature/feat302:feature_lib_302",
        "//feature/feat303:feature_lib_303",
        "//feature/feat304:feature_lib_304",
        "//feature/feat305:feature_lib_305",
        "//feature/feat306:feature_lib_306",
        "//feature/feat307:feature_lib_307",
        "//feature/feat308:feature_lib_308",
        "//feature/feat309:feature_lib_309",
        "//feature/feat310:feature_lib_310",
        "//feature/feat311:feature_lib_311",
        "//feature/feat312:feature_lib_312",
        "//feature/feat313:feature_lib_313",
        "//feature/feat314:feature_lib_314",
        "//feature/feat315:feature_lib_315",
        "//feature/feat316:feature_lib_316",
        "//feature/feat317:feature_lib_317",
        "//feature/feat318:feature_lib_318",
        "//feature/feat319:feature_lib_319",
        "//feature/feat320:feature_lib_320",
        "//feature/feat321:feature_lib_321",
        "//feature/feat322:feature_lib_322",
        "//feature/feat323:feature_lib_323",
        "//feature/feat324:feature_lib_324",
        "//feature/feat325:feature_lib_325",
        "//feature/feat326:feature_lib_326",
        "//feature/feat327:feature_lib_327",
        "//feature/feat328:feature_lib_328",
        "//feature/feat329:feature_lib_329",
        "//feature/feat330:feature_lib_330",
        "//feature/feat331:feature_lib_331",
        "//feature/feat332:feature_lib_332",
        "//feature/feat333:feature_lib_333",
        "//feature/feat334:feature_lib_334",
        "//feature/feat335:feature_lib_335",
        "//feature/feat336:feature_lib_336",
        "//feature/feat337:feature_lib_337",
        "//feature/feat338:feature_lib_338",
        "//feature/feat339:feature_lib_339",
        "//feature/feat340:feature_lib_340",
        "//feature/feat341:feature_lib_341",
        "//feature/feat342:feature_lib_342",
        "//feature/feat343:feature_lib_343",
        "//feature/feat344:feature_lib_344",
        "//feature/feat345:feature_lib_345",
        "//feature/feat346:feature_lib_346",
        "//feature/feat347:feature_lib_347",
        "//feature/feat348:feature_lib_348",
        "//feature/feat349:feature_lib_349",
        "//feature/feat350:feature_lib_350",
        "//feature/feat351:feature_lib_351",
        "//feature/feat352:feature_lib_352",
        "//feature/feat353:feature_lib_353",
        "//feature/feat354:feature_lib_354",
        "//feature/feat355:feature_lib_355",
        "//feature/feat356:feature_lib_356",
        "//feature/feat357:feature_lib_357",
        "//feature/feat358:feature_lib_358",
        "//feature/feat359:feature_lib_359",
        "//feature/feat360:feature_lib_360",
        "//feature/feat361:feature_lib_361",
        "//feature/feat362:feature_lib_362",
        "//feature/feat363:feature_lib_363",
        "//feature/feat364:feature_lib_364",
        "//feature/feat365:feature_lib_365",
        "//feature/feat366:feature_lib_366",
        "//feature/feat367:feature_lib_367",
        "//feature/feat368:feature_lib_368",
        "//feature/feat369:feature_lib_369",
        "//feature/feat370:feature_lib_370",
        "//feature/feat371:feature_lib_371",
        "//feature/feat372:feature_lib_372",
        "//feature/feat373:feature_lib_373",
        "//feature/feat374:feature_lib_374",
        "//feature/feat375:feature_lib_375",
        "//feature/feat376:feature_lib_376",
        "//feature/feat377:feature_lib_377",
        "//feature/feat378:feature_lib_378",
        "//feature/feat379:feature_lib_379",
        "//feature/feat380:feature_lib_380",
        "//feature/feat381:feature_lib_381",
        "//feature/feat382:feature_lib_382",
        "//feature/feat383:feature_lib_383",
        "//feature/feat384:feature_lib_384",
        "//feature/feat385:feature_lib_385",
        "//feature/feat386:feature_lib_386",
        "//feature/feat387:feature_lib_387",
        "//feature/feat388:feature_lib_388",
        "//feature/feat389:feature_lib_389",
        "//feature/feat390:feature_lib_390",
        "//feature/feat391:feature_lib_391",
        "//feature/feat392:feature_lib_392",
        "//feature/feat393:feature_lib_393",
        "//feature/feat394:feature_lib_394",
        "//feature/feat395:feature_lib_395",
        "//feature/feat396:feature_lib_396",
        "//feature/feat397:feature_lib_397",
        "//feature/feat398:feature_lib_398",
        "//feature/feat399:feature_lib_399",
        "//feature/feat400:feature_lib_400",

        "@maven//:androidx_activity_activity_ktx",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_ktx",
        "@maven//:androidx_concurrent_concurrent_futures",
        "@maven//:com_google_guava_listenablefuture",
        "@maven//:com_google_guava_guava",
    ],
)

android_binary(
    name = "app",
    manifest = "src/main/AndroidManifest.xml",
    deps = [
        ":app_lib",
    ],
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/mipmap-anydpi/**"]
    ),
    manifest_values = {
        "minSdkVersion": "26",
        "targetSdkVersion": "34",
        "applicationId": "com.romix.build.systems"
    }
)
